--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "clsx": "^2.1.0",
+    "cookies-next": "^4.1.1",
     "framer-motion": "^11.0.24",
     "next": "14.1.4",
     "next-auth": "^5.0.0-beta.16",
