--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   },
   "dependencies": {
     "@ant-design/charts": "^2.0.3",
-    "@ant-design/plots": "^2.1.15",
+    "@ant-design/plots": "^2.1.13",
     "@chakra-ui/next-js": "^2.2.0",
     "@chakra-ui/react": "^2.8.2",
+    "@chakra-ui/theme-tools": "^2.1.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
@@ -25,6 +26,7 @@
     "clsx": "^2.1.0",
     "cookies-next": "^4.1.1",
     "framer-motion": "^11.0.24",
+    "highlight.js": "^11.9.0",
     "next": "14.1.4",
     "next-auth": "^5.0.0-beta.16",
     "react": "^18",
