--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cookies-next": "^4.1.1",
     "framer-motion": "^11.0.24",
     "highlight.js": "^11.9.0",
+    "mermaid": "^10.9.0",
     "next": "14.1.4",
     "next-auth": "^5.0.0-beta.16",
     "react": "^18",
