--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mermaid": "^10.9.0",
     "next": "14.1.4",
     "next-auth": "^5.0.0-beta.16",
+    "node-html-parser": "^6.1.13",
     "react": "^18",
     "react-dom": "^18",
     "react-use-websocket": "^4.8.1"
