--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@ant-design/charts": "^2.0.3",
     "@ant-design/plots": "^2.1.13",
+    "@auth0/nextjs-auth0": "^3.5.0",
     "@chakra-ui/next-js": "^2.2.0",
     "@chakra-ui/react": "^2.8.2",
     "@chakra-ui/theme-tools": "^2.1.2",
@@ -30,7 +31,6 @@
     "highlight.js": "^11.9.0",
     "mermaid": "^10.9.0",
     "next": "14.1.4",
-    "next-auth": "^5.0.0-beta.16",
     "node-html-parser": "^6.1.13",
     "react": "^18",
     "react-dom": "^18",
