--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@vercel/speed-insights": "^1.0.10",
     "clsx": "^2.1.0",
     "cookies-next": "^4.1.1",
+    "formik": "^2.4.6",
     "framer-motion": "^11.0.24",
     "highlight.js": "^11.9.0",
     "mermaid": "^10.9.0",
